kubernetes/apps/homepage/02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  rules:
    - host: www.akrami.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
  tls:
    - hosts:
        - www.akrami.xyz
      secretName: homepage-tls
